--- a/index.html
+++ b/index.html
@@ -36,7 +36,34 @@
     <div class="text">
         Some random information.
     </div>
-</div>
+    <div class="te">
+        <div class="bone"></div>
+        <div class="btwo"></div>
+        <div class="bthree"></div>
+        <div class="bfour"></div>
+      </div>
+      <div class="yo">
+        <div class="tone"> this is some subtext under an ilustration or image</div>
+        <div class="ttwo">this is some subtext under an ilustration or image</div>
+        <div class="tthree">this is some subtext under an ilustration or image</div>
+        <div class="tfour">this is some subtext under an ilustration or image</div>
+      </div>
+    
+    <div class="quote"> this is an inspiring quote, or testamonial from a customer. Maybe it's just filling up space, or maybe people will actually
+        read it. Who knows? All I know is that it looks nice.
+    </div>
    
+   <div class="back"> 
+       
+    <div class="first"> call to action! its time!
+</div>
+<div class="second">
+    sign up for out product by clicking that button over there!
+</div>
+<div class="sign2">
+    Sign up
+</div>
+   </div>
+   </div>
 </body>
 </html>
